--- a/ProfileLuaParser/ProfileLuaParser.vcxproj.filters
+++ b/ProfileLuaParser/ProfileLuaParser.vcxproj.filters
@@ -29,6 +29,9 @@
     <ClCompile Include="SectionProfileLuaParser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ProfileDescOutput.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common.h">
@@ -47,6 +50,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="Point.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ProfileDescOutput.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
