- all logic removed from application - output adapted to exported profile

--- a/ProfileLuaParser/ProfileLuaParser.vcxproj
+++ b/ProfileLuaParser/ProfileLuaParser.vcxproj
@@ -160,22 +160,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Common.cpp" />
-    <ClCompile Include="ProfileDescOutput.cpp" />
+    <ClCompile Include="ParametricProfileOutput.cpp" />
     <ClCompile Include="SectionProfileLuaParser.cpp" />
-    <ClCompile Include="ParameterDesc.cpp" />
-    <ClCompile Include="Point.cpp" />
-    <ClCompile Include="PolygonDesc.cpp" />
-    <ClCompile Include="ProfileDesc.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Common.h" />
-    <ClInclude Include="IGeometryItem.h" />
-    <ClInclude Include="ParameterDesc.h" />
-    <ClInclude Include="Point.h" />
-    <ClInclude Include="PolygonDesc.h" />
-    <ClInclude Include="ProfileDesc.h" />
-    <ClInclude Include="ProfileDescOutput.h" />
+    <ClInclude Include="ParametricProfileOutput.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
